:package: rewrite npm scripts to use webpack

--- a/package.json
+++ b/package.json
@@ -13,22 +13,19 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=dev gulp",
-    "start:chrome": "cross-env NODE_ENV=dev gulp --browser chrome",
-    "start:firefox": "cross-env NODE_ENV=dev gulp --browser firefox",
-    "build": "cross-env NODE_ENV=dev gulp build",
-    "build:chrome": "cross-env NODE_ENV=dev gulp build --browser chrome",
-    "build:firefox": "cross-env NODE_ENV=dev gulp build --browser firefox",
-    "build:chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
-    "build:firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
+    "prestart": "cross-env NODE_ENV=dev",
+    "prebuild": "cross-env NODE_ENV=dev",
+    "prebuild:prod": "cross-env NODE_ENV=dev",
+    "prerelease": "rimraf artifacts/* && cross-env NODE_ENV=prod",
+    "start": "webpack --watch --env.browser",
+    "build": "webpack --env.browser",
+    "build:prod": "webpack --env.browser",
+    "run:firefox": "web-ext run -s dist",
+    "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
+    "test": "npm run lint",
+    "release": "npm run build -- chrome && npm run pack:chrome && npm run build -- firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
-    "release": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
-    "release:firefox": "npm run build:firefox:prod && npm run pack:firefox && rimraf artifacts/dist-firefox.zip",
-    "release:chrome": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome",
-    "run:firefox": "web-ext run -s dist",
-    "lint": "eslint \"src/**/*.js\" \"tools/**/*.js\" \"config/**/*.js\" gulpfile.babel.js && stylelint \"src/**/*.css\"",
-    "test": "npm run lint",
     "update_emojis": "node tools/update_emojis.js",
     "prepush": "npm run lint"
   },
