:package: fix env variables not being set properly

--- a/package.json
+++ b/package.json
@@ -13,17 +13,14 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "prestart": "cross-env NODE_ENV=dev",
-    "prebuild": "cross-env NODE_ENV=dev",
-    "prebuild:prod": "cross-env NODE_ENV=dev",
-    "prerelease": "rimraf artifacts/* && cross-env NODE_ENV=prod",
-    "start": "webpack --watch --env.browser",
-    "build": "webpack --env.browser",
-    "build:prod": "webpack --env.browser",
+    "prerelease": "rimraf artifacts/*",
+    "start": "cross-env NODE_ENV=dev webpack --watch --env.browser",
+    "build": "cross-env NODE_ENV=dev webpack --env.browser",
+    "build:prod": "cross-env NODE_ENV=prod webpack --env.browser",
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
     "test": "npm run lint",
-    "release": "npm run build -- chrome && npm run pack:chrome && npm run build -- firefox && npm run pack:firefox",
+    "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
     "update_emojis": "node tools/update_emojis.js",
