--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "scripts": {
     "prerelease": "rimraf artifacts/*",
-    "start": "cross-env NODE_ENV=dev webpack --watch --env.browser",
-    "build": "cross-env NODE_ENV=dev webpack --env.browser",
-    "build:prod": "cross-env NODE_ENV=prod webpack --env.browser",
+    "start": "cross-env NODE_ENV=dev webpack --hide-modules --watch --env.browser",
+    "build": "cross-env NODE_ENV=dev webpack --hide-modules --env.browser",
+    "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
     "test": "npm run lint",
@@ -30,6 +30,7 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.6.1",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "^0.1.17",
@@ -51,6 +52,7 @@
     "gifshot": "git://github.com/yahoo/gifshot.git#0.4.4",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "marked": "0.3.6",
     "mustache": "2.3.0",
     "needle": "1.6.0",
