--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "web-ext": "1.9.1",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "xml-js": "1.3.2",
     "zip-webpack-plugin": "^2.0.0"
   },
