--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "reuse-promise": "1.1.0",
     "rimraf": "2.6.1",
     "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "web-ext": "1.9.1",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
