--- a/package.json
+++ b/package.json
@@ -13,79 +13,68 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=dev gulp",
-    "start:chrome": "cross-env NODE_ENV=dev gulp --browser chrome",
-    "start:firefox": "cross-env NODE_ENV=dev gulp --browser firefox",
-    "build": "cross-env NODE_ENV=dev gulp build",
-    "build:chrome": "cross-env NODE_ENV=dev gulp build --browser chrome",
-    "build:firefox": "cross-env NODE_ENV=dev gulp build --browser firefox",
-    "build:chrome:prod": "cross-env NODE_ENV=prod gulp build --type production --browser chrome",
-    "build:firefox:prod": "cross-env NODE_ENV=prod gulp build --type production --browser firefox",
+    "prerelease": "rimraf artifacts/*",
+    "start": "cross-env NODE_ENV=dev webpack --hide-modules --watch --env.browser",
+    "build": "cross-env NODE_ENV=dev webpack --hide-modules --env.browser",
+    "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
+    "run:firefox": "web-ext run -s dist",
+    "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
+    "test": "npm run lint",
+    "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
-    "release": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome && npm run build:firefox:prod && npm run pack:firefox",
-    "release:firefox": "npm run build:firefox:prod && npm run pack:firefox && rimraf artifacts/dist-firefox.zip",
-    "release:chrome": "npm run build:chrome:prod && cross-env NODE_ENV=prod npm run pack:chrome",
-    "run:firefox": "web-ext run -s dist",
-    "lint": "eslint \"src/**/*.js\" \"tools/**/*.js\" \"config/**/*.js\" gulpfile.babel.js && stylelint \"src/**/*.css\"",
-    "test": "npm run lint && npm run release",
     "update_emojis": "node tools/update_emojis.js",
     "prepush": "npm run lint"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-    "babel-core": "6.25.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "babelify": "7.3.0",
-    "bestzip": "1.1.4",
-    "brfs": "1.4.3",
-    "browserify": "14.4.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.6.1",
     "chalk": "1.1.3",
+    "clean-webpack-plugin": "^0.1.17",
     "clipboard": "^1.7.1",
     "config": "1.26.1",
-    "config-browserify": "1.0.5",
+    "copy-webpack-plugin": "^4.2.0",
     "cross-env": "5.0.1",
     "crx": "3.2.1",
+    "css-loader": "^0.28.7",
     "cssnano": "3.10.0",
     "del": "3.0.0",
     "domify": "1.4.0",
     "dompurify": "^1.0.2",
     "emoji-js": "3.2.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fecha": ">=1.0.0",
     "file-saver": "1.3.3",
+    "generate-json-webpack-plugin": "^0.2.2",
     "gifshot": "git://github.com/yahoo/gifshot.git#0.4.4",
-    "gulp": ">=3.9.0",
-    "gulp-eslint": "4.0.0",
-    "gulp-notify": "3.0.0",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "7.0.0",
-    "gulp-remote-src": "0.4.2",
-    "gulp-sourcemaps": "2.6.0",
-    "gulp-uglify": "2.1.2",
-    "gulp-util": "3.0.8",
-    "gulp-zip": "4.0.0",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "marked": "0.3.6",
     "mustache": "2.3.0",
     "needle": "1.6.0",
     "normalize.css": "7.0.0",
     "postcss-cssnext": "2.11.0",
     "postcss-import": "10.0.0",
+    "postcss-loader": "^2.0.8",
     "postcss-nested": "2.0.2",
     "postcss-url": "7.0.0",
     "prismjs": "1.6.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "promise-each": "2.2.0",
     "query-string": "4.3.4",
     "reuse-promise": "1.1.0",
     "rimraf": "2.6.1",
-    "run-sequence": "1.2.2",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "vinyl-transform": "1.0.0",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "web-ext": "1.9.1",
-    "xml-js": "1.3.2"
+    "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "xml-js": "1.3.2",
+    "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^4.6.1",
