--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "^0.1.17",
     "clipboard": "^1.7.1",
@@ -65,6 +70,8 @@
     "prismjs": "1.6.0",
     "promise-each": "2.2.0",
     "query-string": "4.3.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "reuse-promise": "1.1.0",
     "rimraf": "2.6.1",
     "style-loader": "^0.19.0",
@@ -76,9 +83,11 @@
     "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "husky": "^0.14.3",
     "stylelint": "^8.1.0",
     "stylelint-config-standard": "^17.0.0",
