--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "file-saver": "1.3.3",
     "generate-json-webpack-plugin": "^0.2.2",
     "gifshot": "git://github.com/yahoo/gifshot.git#0.4.4",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
@@ -79,6 +80,8 @@
     "web-ext": "1.9.1",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.4",
+    "write-file-webpack-plugin": "^4.2.0",
     "xml-js": "1.3.2",
     "zip-webpack-plugin": "^2.0.0"
   },
