--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "prerelease": "rimraf artifacts/*",
     "start": "cross-env NODE_ENV=dev webpack --hide-modules --watch --env.browser",
+    "serve": "cross-env NODE_ENV=dev node tools/webserver.js",
     "build": "cross-env NODE_ENV=dev webpack --hide-modules --env.browser",
     "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
