--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
     "babel-preset-env": "^1.6.1",
@@ -61,6 +62,8 @@
     "lodash": "4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "0.3.6",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.4",
     "mustache": "2.3.0",
     "needle": "1.6.0",
     "normalize.css": "7.0.0",
@@ -71,6 +74,7 @@
     "postcss-url": "7.0.0",
     "prismjs": "1.6.0",
     "promise-each": "2.2.0",
+    "prop-types": "^15.6.0",
     "query-string": "4.3.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
