--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "query-string": "4.3.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet": "^5.2.0",
     "reuse-promise": "1.1.0",
     "rimraf": "2.6.1",
     "style-loader": "^0.19.0",
