--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "rimraf": "2.6.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
-    "web-ext": "1.9.1",
+    "web-ext": "^2.4.0",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "xml-js": "1.3.2",
