--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "dependencies": {
     "apollo-fetch": "^0.7.0",
     "babel-core": "^6.25.0",
-    "babel-eslint": "8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -93,11 +92,12 @@
     "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "4.10.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "husky": "^0.14.3",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^17.0.0",
