--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.6.1",
+    "brace": "^0.11.0",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "^0.1.17",
     "clipboard": "^1.7.1",
