--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.6.1",
-    "chalk": "1.1.3",
-    "clean-webpack-plugin": "^0.1.17",
+    "chalk": "^2.3.0",
+    "clean-webpack-plugin": "^0.1.18",
     "clipboard": "^1.7.1",
-    "config": "1.26.1",
-    "copy-webpack-plugin": "^4.2.0",
-    "cross-env": "5.0.1",
+    "config": "^1.29.4",
+    "copy-webpack-plugin": "^4.4.0",
+    "cross-env": "^5.1.3",
     "crx": "3.2.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.9",
     "cssnano": "3.10.0",
     "del": "3.0.0",
     "domify": "1.4.0",
@@ -50,39 +50,39 @@
     "fecha": ">=1.0.0",
     "file-saver": "1.3.3",
     "generate-json-webpack-plugin": "^0.2.2",
-    "gifshot": "0.4.5",
-    "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "gifshot": "^0.4.5",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
-    "marked": "0.3.9",
+    "marked": "^0.3.12",
     "mustache": "2.3.0",
-    "needle": "1.6.0",
+    "needle": "^2.1.1",
     "normalize.css": "7.0.0",
-    "postcss-cssnext": "2.11.0",
-    "postcss-import": "10.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-nested": "2.0.2",
-    "postcss-url": "7.0.0",
-    "prismjs": "1.6.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.1.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-url": "^7.3.0",
+    "prismjs": "^1.11.0",
     "promise-each": "2.2.0",
-    "query-string": "4.3.4",
+    "query-string": "^5.1.0",
     "reuse-promise": "1.1.0",
-    "rimraf": "2.6.1",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "web-ext": "^2.4.0",
     "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "xml-js": "1.3.2",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
+    "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "husky": "^0.14.3",
     "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^17.0.0",
-    "ws": "^3.1.0"
+    "stylelint-config-standard": "^18.0.0",
+    "ws": "^4.0.0"
   }
 }
