--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "^0.3.12",
+    "moduleraid": "^2.0.1",
     "mustache": "2.3.0",
     "needle": "^2.1.1",
     "normalize.css": "7.0.0",
