--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
     "update_emojis": "node tools/update_emojis.js",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint",
+    "fix": "prettier-eslint --list-different --write '**/*.{js,jsx}'"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
@@ -52,6 +53,7 @@
     "file-saver": "1.3.3",
     "generate-json-webpack-plugin": "^0.2.2",
     "jquery": "^3.3.1",
+    "lint-staged": "^7.0.0",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "^0.3.12",
@@ -64,6 +66,8 @@
     "postcss-loader": "^2.1.0",
     "postcss-nested": "^3.0.0",
     "postcss-url": "^7.3.0",
+    "prettier": "^1.11.1",
+    "prettier-eslint-cli": "^4.7.1",
     "prismjs": "^1.11.0",
     "promise-each": "2.2.0",
     "query-string": "^5.1.0",
