--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "postcss-url": "^7.3.0",
     "prettier": "^1.11.1",
     "prettier-eslint-cli": "^4.7.1",
+    "prettier-stylelint": "^0.4.2",
     "prismjs": "^1.11.0",
     "promise-each": "2.2.0",
     "query-string": "^5.1.0",
@@ -81,13 +82,14 @@
     "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^2.0.0"
   },
+  "prettier": {},
   "devDependencies": {
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "husky": "^0.14.3",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
     "ws": "^4.0.0"
   }
 }
