--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "marked": "0.3.6",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
+    "moduleraid": "^3.1.0",
     "mustache": "2.3.0",
     "needle": "^2.1.1",
     "normalize.css": "7.0.0",
