--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "bugs": {
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-  },
+    "clean-webpack-plugin": "^0.1.19",
+    "config": "^1.30.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "generate-json-webpack-plugin": "^0.3.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14"
+  }
 }
