--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "scripts": {
     "prerelease": "rimraf artifacts/*",
-    "start": "cross-env NODE_ENV=dev webpack --progress --hide-modules --watch --env.browser",
-    "build": "cross-env NODE_ENV=dev webpack --progress --hide-modules --env.browser",
-    "build:prod": "cross-env NODE_ENV=prod webpack --progress --hide-modules --env.browser",
+    "start": "cross-env NODE_ENV=dev webpack --hide-modules --watch --env.browser",
+    "build": "cross-env NODE_ENV=dev webpack --hide-modules --env.browser",
+    "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
     "test": "npm run lint",
@@ -42,65 +42,66 @@
   "dependencies": {
     "apollo-fetch": "^0.7.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.6.1",
-    "brace": "^0.11.0",
-    "chalk": "^2.3.0",
-    "clean-webpack-plugin": "^0.1.18",
-    "clipboard": "^1.7.1",
-    "config": "^1.29.4",
-    "copy-webpack-plugin": "^4.4.0",
-    "cross-env": "^5.1.3",
+    "brace": "^0.11.1",
+    "chalk": "^2.3.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "clipboard": "^2.0.0",
+    "config": "^1.30.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.4",
     "crx": "3.2.1",
-    "css-loader": "^0.28.9",
+    "css-loader": "^0.28.11",
     "cssnano": "3.10.0",
     "del": "3.0.0",
     "domify": "1.4.0",
     "dompurify": "^1.0.2",
     "emoji-js": "3.4.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fecha": ">=1.0.0",
-    "file-saver": "1.3.3",
-    "generate-json-webpack-plugin": "^0.2.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fecha": "^2.3.3",
+    "file-saver": "^1.3.8",
+    "generate-json-webpack-plugin": "^0.3.1",
     "jquery": "^3.3.1",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^7.0.4",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
-    "marked": "^0.3.12",
-    "moduleraid": "^2.0.1",
+    "marked": "^0.3.19",
+    "moduleraid": "^3.1.0",
     "mustache": "2.3.0",
-    "needle": "^2.1.1",
-    "normalize.css": "7.0.0",
+    "needle": "^2.2.0",
+    "normalize.css": "^8.0.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
     "postcss-nested": "^3.0.0",
-    "postcss-url": "^7.3.0",
+    "postcss-url": "^7.3.2",
     "prettier": "^1.11.1",
     "prettier-eslint-cli": "^4.7.1",
     "prettier-stylelint": "^0.4.2",
-    "prismjs": "^1.11.0",
+    "prismjs": "^1.13.0",
     "promise-each": "2.2.0",
-    "query-string": "^5.1.0",
-    "reuse-promise": "1.1.0",
+    "query-string": "^6.0.0",
+    "reuse-promise": "^2.0.0",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "web-ext": "^2.4.0",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.10.0",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "web-ext": "^2.6.0",
+    "webpack": "^4.5.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.14",
     "xml-js": "^1.6.2",
-    "zip-webpack-plugin": "^2.0.0"
+    "zip-webpack-plugin": "^3.0.0"
   },
   "prettier": {},
   "devDependencies": {
-    "eslint": "^4.17.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
-    "stylelint": "^9.1.3",
+    "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "ws": "^4.0.0"
+    "ws": "^5.1.1"
   }
 }
