--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "config": "^1.30.0",
     "copy-webpack-plugin": "^4.5.1",
     "generate-json-webpack-plugin": "^0.3.1",
+    "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   }
