--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "bugs": {
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
-  "scripts": {},
+  "scripts": {
+    "fix": "prettier-eslint --write --list-different **/*.{js,jsx}"
+  },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "config": "^1.30.0",
     "copy-webpack-plugin": "^4.5.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "generate-json-webpack-plugin": "^0.3.1",
+    "prettier-eslint-cli": "^4.7.1",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
