:construction: time stuff working

--- a/package.json
+++ b/package.json
@@ -13,19 +13,29 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
+    "start": "webpack --watch --progress --env.browser",
     "fix": "prettier-eslint --write --list-different {src,tools}/**/*.{js,jsx}"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "config": "^1.30.0",
     "copy-webpack-plugin": "^4.5.1",
+    "date-fns": "^1.29.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "generate-json-webpack-plugin": "^0.3.1",
+    "lodash": "^4.17.5",
+    "lodash-es": "^4.17.8",
+    "lodash-webpack-plugin": "^0.11.4",
     "prettier-eslint-cli": "^4.7.1",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0",
