--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-stylish": "^0.1.8"
   }
 }
