:package: package-lock

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "BetterTweetDeck",
   "version": "3.7.2",
   "extension_version": "3.7.2",
-  "description":
-    "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
+  "description": "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
   "repository": {
     "type": "git",
     "url": "https://github.com/eramdam/BetterTweetDeck.git"
@@ -53,11 +52,11 @@
     "config": "^1.30.0",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
-    "crx": "3.2.1",
+    "crx": "^3.2.1",
     "css-loader": "^0.28.11",
     "cssnano": "3.10.0",
-    "del": "3.0.0",
-    "domify": "1.4.0",
+    "del": "^3.0.0",
+    "domify": "^1.4.0",
     "dompurify": "^1.0.2",
     "emoji-js": "3.4.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -66,11 +65,11 @@
     "generate-json-webpack-plugin": "^0.3.1",
     "jquery": "^3.3.1",
     "lint-staged": "^7.0.5",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "^0.3.19",
     "moduleraid": "^3.1.0",
-    "mustache": "2.3.0",
+    "mustache": "^2.3.0",
     "needle": "^2.2.0",
     "normalize.css": "^8.0.0",
     "postcss-cssnext": "^3.1.0",
@@ -88,7 +87,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "web-ext": "^2.6.0",
+    "web-ext": "^2.7.0",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.14",
