--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "scripts": {
     "prerelease": "rimraf artifacts/*",
-    "start": "cross-env NODE_ENV=dev webpack --hide-modules --watch --env.browser",
-    "build": "cross-env NODE_ENV=dev webpack --hide-modules --env.browser",
+    "start": "cross-env NODE_ENV=development webpack --hide-modules --watch --env.browser",
+    "build": "cross-env NODE_ENV=development webpack --hide-modules --env.browser",
     "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
     "test": "npm run lint",
     "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
-    "pack:chrome": "cross-env NODE_ENV=dev node tools/pack.js",
-    "pack:firefox": "cross-env NODE_ENV=dev web-ext build -s dist -a artifacts",
+    "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
+    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts",
     "update_emojis": "node tools/update_emojis.js",
     "precommit": "lint-staged",
     "fix": "prettier-eslint --list-different --write '**/*.{js,jsx}' && prettier-stylelint --write -q"
