--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prerelease": "rimraf artifacts/*",
     "start": "cross-env NODE_ENV=development webpack --hide-modules --watch --env.browser",
     "build": "cross-env NODE_ENV=development webpack --hide-modules --env.browser",
-    "build:prod": "cross-env NODE_ENV=prod webpack --hide-modules --env.browser",
+    "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
     "test": "npm run lint",
