--- a/package.json
+++ b/package.json
@@ -24,19 +24,8 @@
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts",
     "update_emojis": "node tools/update_emojis.js",
-    "precommit": "lint-staged",
+    "prepush": "npm run lint",
     "fix": "prettier-eslint --list-different --write '**/*.{js,jsx}' && prettier-stylelint --write -q"
-  },
-  "lint-staged": {
-    "*.css": [
-      "prettier-stylelint --write",
-      "git add"
-    ],
-    "*.{js,jsx}": [
-      "prettier-eslint --write",
-      "eslint",
-      "git add"
-    ]
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
@@ -64,7 +53,6 @@
     "file-saver": "^1.3.8",
     "generate-json-webpack-plugin": "^0.3.1",
     "jquery": "^3.3.1",
-    "lint-staged": "^7.0.5",
     "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "^0.3.19",
