--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.5",
     "lodash-es": "^4.17.8",
     "lodash-webpack-plugin": "^0.11.4",
+    "moduleraid": "^3.4.0",
     "prettier-eslint-cli": "^4.7.1",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0",
