--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "noUnusedLocals": true,
     "pretty": true,
     "skipLibCheck": true,
+    "jsx": "react",
     "sourceMap": true,
     "strict": true,
     "target": "es2018"
