:construction: :pig: PoC React-based thumbnails

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/date-fns": "^2.6.0",
     "@types/jquery": "^3.3.4",
     "@types/lodash": "^4.14.110",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.5",
@@ -45,6 +47,8 @@
     "lodash-webpack-plugin": "^0.11.5",
     "moduleraid": "^3.4.0",
     "prettier-eslint-cli": "^4.7.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1",
