--- a/package.json
+++ b/package.json
@@ -19,43 +19,42 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@types/date-fns": "^2.6.0",
-    "@types/jquery": "^3.3.4",
-    "@types/lodash": "^4.14.110",
-    "@types/react": "^16.4.6",
+    "@types/jquery": "^3.3.5",
+    "@types/lodash": "^4.14.116",
+    "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
-    "comlinkjs": "^2.4.1",
-    "config": "^1.30.0",
+    "config": "^2.0.1",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.1.4",
     "date-fns": "^1.29.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-typescript": "^0.12.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.4",
     "generate-json-webpack-plugin": "^0.3.1",
     "lodash": "^4.17.10",
     "lodash-es": "^4.17.10",
     "lodash-webpack-plugin": "^0.11.5",
-    "moduleraid": "^3.4.0",
+    "moduleraid": "^4.0.1",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2",
-    "typescript-eslint-parser": "^16.0.1",
-    "webextension-polyfill": "^0.2.1",
+    "typescript": "^3.0.1",
+    "typescript-eslint-parser": "git://github.com/frontapp/typescript-eslint-parser.git#33903f301c0b82c626f63e8d566d1426c04cd284",
+    "webextension-polyfill": "^0.3.0",
     "webextension-polyfill-ts": "^0.8.7",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^2.1.5",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
     "webpack-stylish": "^0.1.8"
   }
 }
