--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.19",
     "config": "^2.0.1",
     "copy-webpack-plugin": "^4.5.2",
