:construction: naive implementation of thumbnails display

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
+    "@types/react-portal": "^4.0.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -50,6 +51,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-portal": "^4.2.0",
     "ts-loader": "^5.2.1",
     "typescript": "^3.2.2",
     "typescript-eslint-parser": "^19.0.2",
