--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "prerelease": "rimraf artifacts/*",
-    "start": "cross-env NODE_ENV=development webpack --hide-modules --progress --watch --env.browser",
+    "start": "cross-env NODE_ENV=dev webpack --hide-modules --progress --watch --env.browser",
     "build": "cross-env NODE_ENV=development webpack --hide-modules --env.browser",
     "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
@@ -90,6 +90,7 @@
     "husky": "^0.14.3",
     "stylelint": "^9.9.0",
     "stylelint-config-standard": "^18.2.0",
+    "svg-inline-loader": "^0.8.0",
     "ws": "^5.1.1"
   }
 }
