add format on save option in VSC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "prettier.eslintIntegration": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnSaveTimeout": 5000,
   "typescriptHero.imports.organizeOnSave": true
 }
