ignore CSS files when auto-formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "prettier.eslintIntegration": true,
   "editor.formatOnSave": true,
   "editor.formatOnSaveTimeout": 5000,
-  "typescriptHero.imports.organizeOnSave": true
+  "typescriptHero.imports.organizeOnSave": true,
+  "[css]": {
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false
+  }
 }
