Options for mute/block items in a tweet's actions bar (#410)
* add format on save option in VSC

* :cookie: option to add items to block/mute directly on a tweet

* :sparkles:

* :shirt:

* fix typo

* ignore CSS files when auto-formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "prettier.eslintIntegration": true,
-  "typescriptHero.imports.organizeOnSave": true
+  "editor.formatOnSave": true,
+  "editor.formatOnSaveTimeout": 5000,
+  "typescriptHero.imports.organizeOnSave": true,
+  "[css]": {
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false
+  }
 }
