prettier + ESlint config

--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
     "fix": "prettier-eslint --write --list-different {src,tools}/**/*.{js,jsx,ts,tsx}"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^1.18.2"
   }
 }
