--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.formatOnSave": true,
-  "prettier.eslintIntegration": true,
+  "eslint.autoFixOnSave": true,
   "movets.skipWarning": true,
   "typescriptHero.imports.organizeOnSave": true,
   "typescriptHero.imports.multiLineTrailingComma": false,
