--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "fix": "prettier-eslint --write --list-different {src,tools}/**/*.{js,jsx,ts,tsx}"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
-  "dependencies": {},
+  "dependencies": {
+    "typescript": "^3.6.3"
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.3.0",
