basic setup working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
   "eslint.autoFixOnSave": true,
   "movets.skipWarning": true,
   "typescriptHero.imports.organizeOnSave": true,
-  "typescriptHero.imports.multiLineTrailingComma": false,
+  "typescriptHero.imports.multiLineTrailingComma": true,
   "typescriptHero.imports.insertSpaceBeforeAndAfterImportBraces": false,
-  "typescriptHero.imports.multiLineWrapThreshold": 100,
+  "typescriptHero.imports.multiLineWrapThreshold": 80,
   "xmlTools.splitXmlnsOnFormat": false,
   "files.eol": "\n",
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "html"],
