add helpers to manipulate mustache templates

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
+    "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.139",
     "@types/node": "^12.7.8",
@@ -27,12 +28,14 @@
     "config": "^3.2.2",
     "cross-env": "^6.0.0",
     "generate-json-webpack-plugin": "^0.3.1",
+    "hogan.js": "^3.0.2",
     "lodash": "^4.17.15",
     "moduleraid": "^4.0.1",
     "node-config-ts": "^2.2.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "ts-loader": "^6.1.2",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.3",
     "webextension-polyfill": "^0.4.0",
     "webextension-polyfill-ts": "^0.10.0",
