disable shorthand props rename in TS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
     "markdown": "javascriptreact"
   },
   "emmet.excludeLanguages": [],
+  "typescript.preferences.renameShorthandProperties": false,
   "beautify.ignore": ["*"]
 }
