--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BetterTweetDeck",
+  "name": "bettertweetdeck",
   "version": "4.0.0",
   "extension_version": "4.0.0",
   "description": "Adds some nice options on TweetDeck to provide a better experience on the webapp when used on Chrome.",
@@ -21,40 +21,41 @@
   "dependencies": {
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.3.31",
-    "@types/lodash": "^4.14.139",
-    "@types/node": "^12.7.8",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "config": "^3.2.2",
-    "cross-env": "^6.0.0",
-    "fp-ts": "^2.1.0",
+    "@types/lodash": "^4.14.146",
+    "@types/node": "^12.12.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "config": "^3.2.4",
+    "cross-env": "^6.0.3",
+    "fp-ts": "^2.1.1",
     "generate-json-webpack-plugin": "^0.3.1",
     "hogan.js": "^3.0.2",
     "io-ts": "^2.0.1",
     "lodash": "^4.17.15",
     "moduleraid": "^4.0.1",
-    "node-config-ts": "^2.2.4",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "ts-loader": "^6.1.2",
+    "node-config-ts": "^2.3.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.3",
-    "webextension-polyfill": "^0.4.0",
+    "typescript": "^3.7.2",
+    "web-ext": "^3.2.1",
+    "webextension-polyfill": "^0.5.0",
     "webextension-polyfill-ts": "^0.10.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "eslint": "6.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "eslint": "6.6.0",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.18.2"
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "prettier": "^1.19.1"
   }
 }
