--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-portal": "^4.0.2",
     "config": "^3.2.4",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "fp-ts": "^2.1.1",
     "generate-json-webpack-plugin": "^0.3.1",
     "hogan.js": "^3.0.2",
@@ -36,6 +38,8 @@
     "node-config-ts": "^2.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-portal": "^4.2.0",
+    "style-loader": "^1.0.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2",
