timestamp formatting working

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.146",
+    "@types/luxon": "^1.21.0",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
@@ -34,6 +35,7 @@
     "hogan.js": "^3.0.2",
     "io-ts": "^2.0.1",
     "lodash": "^4.17.15",
+    "luxon": "^1.21.3",
     "moduleraid": "^4.0.1",
     "node-config-ts": "^2.3.1",
     "react": "^16.11.0",
