--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^3.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.0",
     "eslint-plugin-unused-imports": "^0.1.2",
+    "file-loader": "^5.0.2",
     "fp-ts": "^2.1.1",
     "generate-json-webpack-plugin": "^0.3.1",
     "hogan.js": "^3.0.2",
@@ -47,6 +48,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2",
+    "url-loader": "^3.0.0",
     "web-ext": "^3.2.1",
     "webextension-polyfill": "^0.5.0",
     "webextension-polyfill-ts": "^0.10.0",
