--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "update_emojis": "node tools/update_emojis.js",
     "prepush": "npm run lint",
     "bump-version": "node tools/bumpVersion.js",
-    "fix": "prettier-eslint --list-different --write '**/*.{js,jsx}' && prettier-stylelint --write -q"
+    "fix": "eslint --fix '**/*.{js,jsx}'"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
@@ -66,8 +66,6 @@
     "postcss-loader": "^2.1.3",
     "postcss-nested": "^3.0.0",
     "postcss-url": "^7.3.2",
-    "prettier": "^1.13.7",
-    "prettier-eslint-cli": "^4.7.1",
     "prettier-stylelint": "^0.4.2",
     "prismjs": "^1.13.0",
     "promise-each": "2.2.0",
@@ -85,9 +83,11 @@
     "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^3.0.0"
   },
-  "prettier": {},
   "devDependencies": {
-    "eslint": "^4.19.1",
+    "eslint": "6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
