--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
   },
   "devDependencies": {
     "eslint": "6.6.0",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
+    "eslint-plugin-unused-imports": "^0.1.2",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
