--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "clean-webpack-plugin": "^0.1.19",
     "clipboard": "^2.0.0",
     "config": "^1.30.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.1.4",
-    "crx": "^3.2.1",
-    "css-loader": "^0.28.11",
-    "cssnano": "3.10.0",
+    "crx": "^5.0.1",
+    "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "del": "^3.0.0",
     "dompurify": "^2.0.0",
     "emoji-js": "3.4.0",
@@ -66,7 +66,6 @@
     "postcss-loader": "^2.1.3",
     "postcss-nested": "^3.0.0",
     "postcss-url": "^7.3.2",
-    "prettier-stylelint": "^0.4.2",
     "prismjs": "^1.13.0",
     "promise-each": "2.2.0",
     "query-string": "^6.0.0",
@@ -75,11 +74,10 @@
     "semver": "^5.6.0",
     "stringify-package": "^1.0.0",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "web-ext": "^2.7.0",
+    "web-ext": "^4.0.0",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.3.10",
     "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^3.0.0"
   },
