--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "cross-env NODE_ENV=development webpack --hide-modules --env.browser",
     "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
     "run:firefox": "web-ext run -s dist",
-    "lint": "eslint {src,tools,config}/**/*.js webpack.config.js && stylelint src/**/*.css",
+    "lint": "eslint {src,tools,config}/**/*.js *.js",
     "test": "npm run lint",
     "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
@@ -26,7 +26,7 @@
     "update_emojis": "node tools/update_emojis.js",
     "prepush": "npm run lint",
     "bump-version": "node tools/bumpVersion.js",
-    "fix": "prettier-eslint --list-different --write '**/*.{js,jsx}' && prettier-stylelint --write -q"
+    "fix": "eslint --fix '**/*.{js,jsx}' && prettier --write '**/*.css'"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
@@ -41,11 +41,11 @@
     "clean-webpack-plugin": "^0.1.19",
     "clipboard": "^2.0.0",
     "config": "^1.30.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.1.4",
-    "crx": "^3.2.1",
-    "css-loader": "^0.28.11",
-    "cssnano": "3.10.0",
+    "crx": "^5.0.1",
+    "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "del": "^3.0.0",
     "dompurify": "^2.0.0",
     "emoji-js": "3.4.0",
@@ -66,9 +66,6 @@
     "postcss-loader": "^2.1.3",
     "postcss-nested": "^3.0.0",
     "postcss-url": "^7.3.2",
-    "prettier": "^1.13.7",
-    "prettier-eslint-cli": "^4.7.1",
-    "prettier-stylelint": "^0.4.2",
     "prismjs": "^1.13.0",
     "promise-each": "2.2.0",
     "query-string": "^6.0.0",
@@ -77,17 +74,20 @@
     "semver": "^5.6.0",
     "stringify-package": "^1.0.0",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "web-ext": "^2.7.0",
+    "web-ext": "^4.0.0",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.3.10",
     "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^3.0.0"
   },
-  "prettier": {},
   "devDependencies": {
-    "eslint": "^4.19.1",
+    "eslint": "6.6.0",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
+    "eslint-plugin-unused-imports": "^0.1.2",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
