--- a/package.json
+++ b/package.json
@@ -20,52 +20,53 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@types/hogan.js": "^3.0.0",
-    "@types/jquery": "^3.3.31",
-    "@types/lodash": "^4.14.146",
-    "@types/luxon": "^1.21.0",
-    "@types/node": "^12.12.7",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.4",
+    "@types/jquery": "^3.3.38",
+    "@types/lodash": "^4.14.152",
+    "@types/luxon": "^1.24.0",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-portal": "^4.0.2",
-    "config": "^3.2.4",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "eslint-plugin-simple-import-sort": "^5.0.0",
-    "eslint-plugin-unused-imports": "^0.1.2",
-    "file-loader": "^5.0.2",
-    "fp-ts": "^2.1.1",
-    "generate-json-webpack-plugin": "^0.3.1",
+    "@types/webpack": "^4.41.13",
+    "config": "^3.3.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-unused-imports": "^0.1.3",
+    "file-loader": "^6.0.0",
+    "fp-ts": "^2.6.1",
+    "generate-json-webpack-plugin": "^1.0.0",
     "hogan.js": "^3.0.2",
-    "io-ts": "^2.0.1",
+    "io-ts": "^2.2.3",
     "lodash": "^4.17.15",
-    "luxon": "^1.21.3",
+    "luxon": "^1.24.1",
     "moduleraid": "^4.0.1",
-    "node-config-ts": "^2.3.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-portal": "^4.2.0",
-    "style-loader": "^1.0.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.7.2",
-    "url-loader": "^3.0.0",
-    "web-ext": "^3.2.1",
-    "webextension-polyfill": "^0.5.0",
-    "webextension-polyfill-ts": "^0.10.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "node-config-ts": "^3.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-portal": "^4.2.1",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.4",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.3",
+    "url-loader": "^4.1.0",
+    "web-ext": "^4.2.0",
+    "webextension-polyfill": "^0.6.0",
+    "webextension-polyfill-ts": "^0.16.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
-    "eslint": "6.6.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.19.1"
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
+    "prettier": "^2.0.5"
   }
 }
