format settings tweak

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "markdown": "javascriptreact"
   },
   "emmet.excludeLanguages": [],
-  "typescript.preferences.renameShorthandProperties": false,
+  "typescript.preferences.useAliasesForRenames": false,
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
   "beautify.ignore": [
     "*"
   ],
