--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "dom-chef": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
     "file-loader": "^6.0.0",
@@ -57,6 +58,7 @@
     "react-dom": "^16.13.1",
     "react-portal": "^4.2.1",
     "style-loader": "^1.2.1",
+    "ts-key-enum": "^2.0.3",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3",
